--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "food-delivery",
-  "homepage": "https://diego-1d.github.io/",
+  "homepage": "https://diego-1d.github.io/food-delivery/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
